Tue Mar 10 09:11:54 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.h:
        * utils/catior/catior.cpp:
          Moved ziop_compressor_name to Ziop loader class.
          Made this function static.

Tue Mar 10 08:46:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Resolved compiler warning.

Tue Mar 10 08:22:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Base.h:
        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP.h:
        * utils/catior/catior.cpp:
          Resolved bugzilla 3611. ZIOP logging according to 
          TAO standard. More log info regarding compression 
          details.

Tue Mar 10 07:05:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp
        * examples/Advanced/ch_12/server.cpp
        * examples/Advanced/ch_18/Advanced_ch_18.mpc
        * examples/Advanced/ch_18/client.cpp
        * examples/Advanced/ch_18/server.cpp
        * examples/Advanced/ch_21/Advanced_ch_21.mpc
        * examples/Advanced/ch_21/client.cpp
        * examples/Advanced/ch_21/server.cpp
          Fixed compile issues

Mon Mar  9 22:06:29 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Bug_1884_Regression/consumer.cpp:
          more wchar fixes.

Mon Mar  9 21:06:36 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/tao_other_tests.lst:

        * orbsvcs/tests/Notify/Validate_Client/README:
        * orbsvcs/tests/Notify/Validate_Client/notify.conf:
        * orbsvcs/tests/Notify/Validate_Client/persistency_copy:
        * orbsvcs/tests/Notify/Validate_Client/run_test.pl:

          Added test for Notify_Service client connection validation
          feature.

        * bin/tao_other_tests.lst:

          Added Notify Validate_Client test.

Mon Mar  9 19:08:39 UTC 2009  Olli Savia  <ops@iki.fi>
